--- a/client_code/log_in_form/Home/manage_products/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/form_template.yaml
@@ -76,7 +76,7 @@ components:
         event_bindings: {click: link_3_click}
       - type: Link
         properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
-          visible: true, text: '  VIEW CATEGORIES', font_size: null, wrap_on: mobile,
+          visible: true, text: '  ADD CATEGORIES', font_size: null, wrap_on: mobile,
           font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
           spacing_below: small, italic: false, background: '', bold: false, underline: false,
           icon: ''}
