--- a/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
@@ -48,9 +48,9 @@ components:
           layout_properties: {grid_position: 'CXRQEH,SLEMYG'}
           event_bindings: {click: link_1_copy_click}
         - type: XYPanel
-          properties: {height: 1035.599998474121}
+          properties: {height: 1109.799949645996}
           name: xy_panel_1
-          layout_properties: {grid_position: 'EUYFWY,VXIUTQ'}
+          layout_properties: {grid_position: 'NNYSKN,ARRMGU'}
           components:
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -96,49 +96,65 @@ components:
               background: '', bold: false, underline: false}
             name: text_area_1
             layout_properties: {x: 177, y: 181.20001220703125, width: 443}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: Product Visibility,
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: true, underline: false}
+            name: check_box_3
+            layout_properties: {x: 542, y: 10, width: 152}
+            event_bindings: {change: check_box_3_change}
+          - type: Label
+            properties: {}
+            name: label_1
+            layout_properties: {x: 177, y: 78, width: 213}
+          - type: Button
+            properties: {role: outlined-button, align: center, tooltip: '', border: '',
+              enabled: true, foreground: Black, visible: true, text: SUBMIT, font_size: null,
+              font: '', spacing_above: small, icon_align: left, spacing_below: small,
+              italic: false, background: '#0876E8', bold: false, underline: false,
+              icon: ''}
+            name: button_1
+            layout_properties: {x: 0, y: 1044.800048828125, width: 699}
+            event_bindings: {click: button_1_click}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_2
+            layout_properties: {x: 177, y: 976.050048828125, width: 443}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-pf(10% off on processing fee),
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_1
+            layout_properties: {x: 177, y: 929.2000488281251, width: 443}
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Product Categories', font_size: null, font: '',
-              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-              background: '', bold: false, underline: false, icon: ''}
-            name: label_5_copy
-            layout_properties: {x: 0, y: 312.8000183105469, width: 160}
-          - type: DropDown
-            properties:
-              role: outlined
-              align: full
-              tooltip: ''
-              placeholder: Enter product categories
-              border: ''
-              enabled: true
-              foreground: ''
-              items: []
-              visible: true
-              font_size: null
-              font: ''
-              spacing_above: small
-              spacing_below: small
-              italic: false
-              background: ''
-              bold: false
-              underline: false
-              include_placeholder: true
-            name: drop_down_1
-            layout_properties: {x: 177, y: 312.8000183105469, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Processing Fee', font_size: null, font: '', spacing_above: small,
+              visible: true, text: Discount  Coupons, font_size: null, font: '', spacing_above: small,
               icon_align: left, spacing_below: small, italic: false, background: '',
               bold: false, underline: false, icon: ''}
-            name: label_6_copy
-            layout_properties: {x: 0, y: 363.8000183105469, width: 160}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Extension Fee', font_size: null, font: '', spacing_above: small,
-              icon_align: left, spacing_below: small, italic: false, background: '',
-              bold: false, underline: false, icon: ''}
-            name: label_7_copy
-            layout_properties: {x: 0, y: 415.4000244140625, width: 160}
+            name: label_14_copy
+            layout_properties: {x: -7, y: 883.2000732421875, width: 160}
+          - type: RadioButton
+            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+              enabled: true, foreground: '', value: '', visible: true, text: 'Yes',
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, group_name: radioGroup2,
+              underline: false}
+            name: radio_button_3
+            layout_properties: {x: 177, y: 883.2000122070312, width: 67}
+            event_bindings: {clicked: radio_button_3_clicked}
+          - type: RadioButton
+            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+              enabled: true, foreground: '', value: '', visible: true, text: 'NO',
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, group_name: radioGroup2,
+              underline: false}
+            name: radio_button_4
+            layout_properties: {x: 266, y: 883.2000122070312, width: 58}
           - type: TextBox
             properties: {role: outlined, align: left, hide_text: false, tooltip: '',
               placeholder: Enter Extension fee, border: '', enabled: true, foreground: '',
@@ -146,20 +162,13 @@ components:
               type: text, spacing_below: small, italic: false, background: '', bold: false,
               underline: false}
             name: text_box_4
-            layout_properties: {x: 177, y: 421.4000244140625, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Interest  Rate(%)', font_size: null, font: '',
-              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-              background: '', bold: false, underline: false, icon: ''}
-            name: label_8_copy
-            layout_properties: {x: 0, y: 473, width: 160}
+            layout_properties: {x: 177, y: 506.29998779296875, width: 232}
           - type: ColumnPanel
             properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
               wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
               spacing_below: small, background: '#CBCFD0'}
             name: column_panel_2
-            layout_properties: {x: 177, y: 478.29998779296875, width: 517}
+            layout_properties: {x: 177, y: 564.2999877929688, width: 517}
             components:
             - type: Label
               properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -298,51 +307,11 @@ components:
               layout_properties: {grid_position: 'RBEGUU,FUCJSH'}
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: Discount  Coupons, font_size: null, font: '', spacing_above: small,
-              icon_align: left, spacing_below: small, italic: false, background: '',
-              bold: false, underline: false, icon: ''}
-            name: label_14_copy
-            layout_properties: {x: 0, y: 797.7999877929688, width: 160}
-          - type: RadioButton
-            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-              enabled: true, foreground: '', value: '', visible: true, text: 'Yes',
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, group_name: radioGroup2,
-              underline: false}
-            name: radio_button_3
-            layout_properties: {x: 177, y: 797.7999877929688, width: 67}
-            event_bindings: {clicked: radio_button_3_clicked}
-          - type: RadioButton
-            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-              enabled: true, foreground: '', value: '', visible: true, text: 'NO',
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, group_name: radioGroup2,
-              underline: false}
-            name: radio_button_4
-            layout_properties: {x: 266, y: 797.7999877929688, width: 58}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-pf(10% off on processing fee),
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
-            name: check_box_1
-            layout_properties: {x: 177, y: 857.2000122070312, width: 443}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
-            name: check_box_2
-            layout_properties: {x: 177, y: 904.050048828125, width: 443}
-          - type: Button
-            properties: {role: outlined-button, align: center, tooltip: '', border: '',
-              enabled: true, foreground: Black, visible: true, text: SUBMIT, font_size: null,
-              font: '', spacing_above: small, icon_align: left, spacing_below: small,
-              italic: false, background: '#0876E8', bold: false, underline: false,
-              icon: ''}
-            name: button_1
-            layout_properties: {x: 10, y: 957, width: 699}
-            event_bindings: {click: button_1_click}
+              visible: true, text: ' Interest  Rate(%)', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_8_copy
+            layout_properties: {x: 0, y: 564.2999877929688, width: 160}
           - type: TextBox
             properties: {role: outlined, align: left, hide_text: false, tooltip: '',
               placeholder: Enter Processing fee, border: '', enabled: true, foreground: '',
@@ -350,19 +319,79 @@ components:
               type: text, spacing_below: small, italic: false, background: '', bold: false,
               underline: false}
             name: text_box_3
-            layout_properties: {x: 177, y: 363.8000183105469, width: 232}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: Product Visibility,
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: true, underline: false}
-            name: check_box_3
-            layout_properties: {x: 542, y: 10, width: 152}
-            event_bindings: {change: check_box_3_change}
+            layout_properties: {x: 177, y: 447.8000183105469, width: 232}
           - type: Label
-            properties: {}
-            name: label_1
-            layout_properties: {x: 177, y: 78, width: 213}
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Processing Fee', font_size: null, font: '', spacing_above: small,
+              icon_align: left, spacing_below: small, italic: false, background: '',
+              bold: false, underline: false, icon: ''}
+            name: label_6_copy
+            layout_properties: {x: 0, y: 447.79998779296875, width: 160}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Extension Fee', font_size: null, font: '', spacing_above: small,
+              icon_align: left, spacing_below: small, italic: false, background: '',
+              bold: false, underline: false, icon: ''}
+            name: label_7_copy
+            layout_properties: {x: 0, y: 506.29998779296875, width: 160}
+          - type: DropDown
+            properties:
+              role: outlined
+              align: full
+              tooltip: ''
+              placeholder: Enter product categories
+              border: ''
+              enabled: true
+              foreground: ''
+              items: []
+              visible: true
+              font_size: null
+              font: ''
+              spacing_above: small
+              spacing_below: small
+              italic: false
+              background: ''
+              bold: false
+              underline: false
+              include_placeholder: true
+            name: drop_down_1
+            layout_properties: {x: 177, y: 390.78753662109375, width: 232}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Product Categories', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_5_copy
+            layout_properties: {x: 0, y: 390.78753662109375, width: 160}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Product  Group', font_size: null, font: '', spacing_above: small,
+              icon_align: left, spacing_below: small, italic: false, background: '',
+              bold: false, underline: false, icon: ''}
+            name: label_2
+            layout_properties: {x: 0, y: 327.6000061035156, width: 160}
+          - type: DropDown
+            properties:
+              role: outlined
+              align: full
+              tooltip: ''
+              placeholder: Enter your product Group
+              border: ''
+              enabled: true
+              foreground: ''
+              items: [Vehicle Loans, '']
+              visible: true
+              font_size: null
+              font: ''
+              spacing_above: small
+              spacing_below: small
+              italic: false
+              background: ''
+              bold: false
+              underline: false
+              include_placeholder: true
+            name: drop_down_5
+            layout_properties: {x: 177, y: 327.6000061035156, width: 232}
 - type: FlowPanel
   properties: {}
   name: navbar_links
