--- a/client_code/log_in_form/Home/manage_products/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/form_template.yaml
@@ -14,7 +14,7 @@ components:
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {}
+    properties: {col_widths: '{}'}
     name: content_panel_copy
     layout_properties:
       col_widths: {}
@@ -83,3 +83,12 @@ components:
         name: link_4
         layout_properties: {grid_position: 'VDBFAJ,JATQFY'}
         event_bindings: {click: link_4_click}
+    - type: Link
+      properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
+        visible: true, text: ' ADD PRODUCT GROUP', font_size: null, wrap_on: mobile,
+        font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
+      name: link_5
+      layout_properties: {grid_position: 'WOJYZU,CDTGPB'}
+      event_bindings: {click: link_5_click}
