--- a/anvil.yaml
+++ b/anvil.yaml
@@ -228,5 +228,8 @@ db_schema:
     - name: product_categories
       admin_ui: {width: 200, order: 13}
       type: string
+    - name: product_group_2
+      admin_ui: {width: 200, order: 0}
+      type: string
     title: product_details
 renamed: true
