--- a/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_products/manage_products1/form_template.yaml
@@ -108,13 +108,132 @@ components:
             properties: {}
             name: label_1
             layout_properties: {x: 177, y: 78, width: 213}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_2
+            layout_properties: {x: 154.875, y: 1004.9375, width: 443}
+          - type: Button
+            properties: {role: outlined-button, align: center, tooltip: '', border: '',
+              enabled: true, foreground: Black, visible: true, text: NEXT, font_size: null,
+              font: '', spacing_above: small, icon_align: left, spacing_below: small,
+              italic: false, background: '#0876E8', bold: false, underline: false,
+              icon: ''}
+            name: button_1
+            layout_properties: {x: 4.2000000000000455, y: 1062.99, width: 699}
+            event_bindings: {click: button_1_click}
+          - type: CheckBox
+            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-pf(10% off on processing fee),
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, checked: false, underline: false}
+            name: check_box_1
+            layout_properties: {x: 154.875, y: 945.2000732421875, width: 443}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Discount  Coupons', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_14_copy
+            layout_properties: {x: 0, y: 878.2000122070312, width: 160}
+          - type: RadioButton
+            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+              enabled: true, foreground: '', value: '', visible: true, text: 'Yes',
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, group_name: radioGroup2,
+              underline: false}
+            name: radio_button_3
+            layout_properties: {x: 170, y: 878.2000122070312, width: 67}
+            event_bindings: {clicked: radio_button_3_clicked}
+          - type: RadioButton
+            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+              enabled: true, foreground: '', value: '', visible: true, text: 'NO',
+              font_size: null, font: '', spacing_above: small, spacing_below: small,
+              italic: false, background: '', bold: false, group_name: radioGroup2,
+              underline: false}
+            name: radio_button_4
+            layout_properties: {x: 266, y: 878.2000122070312, width: 58}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Interest  Rate(%)', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_8_copy
+            layout_properties: {x: 0, y: 558.2999877929688, width: 160}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Extension Fee', font_size: null, font: '', spacing_above: small,
+              icon_align: left, spacing_below: small, italic: false, background: '',
+              bold: false, underline: false, icon: ''}
+            name: label_7_copy
+            layout_properties: {x: 0, y: 492.29998779296875, width: 160}
           - type: Label
             properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
               visible: true, text: ' Processing Fee', font_size: null, font: '', spacing_above: small,
               icon_align: left, spacing_below: small, italic: false, background: '',
               bold: false, underline: false, icon: ''}
             name: label_6_copy
-            layout_properties: {x: 0, y: 311.79998779296875, width: 160}
+            layout_properties: {x: 0, y: 434.29998779296875, width: 160}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Product categories', font_size: null, font: '',
+              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+              background: '', bold: false, underline: false, icon: ''}
+            name: label_3
+            layout_properties: {x: 4.200004577636719, y: 372.8000183105469, width: 140.675}
+          - type: Label
+            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+              visible: true, text: ' Product Group', font_size: null, font: '', spacing_above: small,
+              icon_align: left, spacing_below: small, italic: false, background: '',
+              bold: false, underline: false, icon: ''}
+            name: label_2
+            layout_properties: {x: 0, y: 304.8000183105469, width: 160}
+          - type: DropDown
+            properties:
+              role: outlined
+              align: full
+              tooltip: ''
+              placeholder: Enter your Group
+              border: ''
+              enabled: true
+              foreground: ''
+              items: [Personal Loan, Home Loan, Vehicle Loan, Business Loan]
+              visible: true
+              font_size: null
+              font: ''
+              spacing_above: small
+              spacing_below: small
+              italic: false
+              background: ''
+              bold: false
+              underline: false
+              include_placeholder: true
+            name: drop_down_1
+            layout_properties: {x: 177.00001525878906, y: 310.8000183105469, width: 221}
+          - type: DropDown
+            properties:
+              role: outlined
+              align: full
+              tooltip: ''
+              placeholder: ''
+              border: ''
+              enabled: true
+              foreground: ''
+              items: [Enter Your Categories]
+              visible: true
+              font_size: null
+              font: ''
+              spacing_above: small
+              spacing_below: small
+              italic: false
+              background: ''
+              bold: false
+              underline: false
+              include_placeholder: false
+            name: drop_down_5
+            layout_properties: {x: 177, y: 372.8000183105469, width: 221}
           - type: TextBox
             properties: {role: outlined, align: left, hide_text: false, tooltip: '',
               placeholder: Enter Processing fee, border: '', enabled: true, foreground: '',
@@ -122,14 +241,7 @@ components:
               type: text, spacing_below: small, italic: false, background: '', bold: false,
               underline: false}
             name: text_box_3
-            layout_properties: {x: 177, y: 311.7875061035156, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Extension Fee', font_size: null, font: '', spacing_above: small,
-              icon_align: left, spacing_below: small, italic: false, background: '',
-              bold: false, underline: false, icon: ''}
-            name: label_7_copy
-            layout_properties: {x: 0, y: 387.29998779296875, width: 160}
+            layout_properties: {x: 177, y: 434.29998779296875, width: 232}
           - type: TextBox
             properties: {role: outlined, align: left, hide_text: false, tooltip: '',
               placeholder: Enter Extension fee, border: '', enabled: true, foreground: '',
@@ -137,20 +249,13 @@ components:
               type: text, spacing_below: small, italic: false, background: '', bold: false,
               underline: false}
             name: text_box_4
-            layout_properties: {x: 177, y: 387.28753662109375, width: 232}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Interest  Rate(%)', font_size: null, font: '',
-              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-              background: '', bold: false, underline: false, icon: ''}
-            name: label_8_copy
-            layout_properties: {x: 0, y: 474.29998779296875, width: 160}
+            layout_properties: {x: 177, y: 492.29998779296875, width: 232}
           - type: ColumnPanel
             properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-              wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+              wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"KEBGAJ":30,"JEVNRY":30}',
               spacing_below: small, background: '#CBCFD0'}
             name: column_panel_2
-            layout_properties: {x: 170, y: 474.29998779296875, width: 517}
+            layout_properties: {x: 177, y: 558.2999877929688, width: 517}
             components:
             - type: Label
               properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
@@ -287,53 +392,6 @@ components:
                 background: '', bold: true, underline: false, icon: ''}
               name: link_2
               layout_properties: {grid_position: 'RBEGUU,FUCJSH'}
-          - type: Label
-            properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-              visible: true, text: ' Discount  Coupons', font_size: null, font: '',
-              spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-              background: '', bold: false, underline: false, icon: ''}
-            name: label_14_copy
-            layout_properties: {x: 0, y: 802.2000122070312, width: 160}
-          - type: RadioButton
-            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-              enabled: true, foreground: '', value: '', visible: true, text: 'Yes',
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, group_name: radioGroup2,
-              underline: false}
-            name: radio_button_3
-            layout_properties: {x: 170, y: 802.2000122070312, width: 67}
-            event_bindings: {clicked: radio_button_3_clicked}
-          - type: RadioButton
-            properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-              enabled: true, foreground: '', value: '', visible: true, text: 'NO',
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, group_name: radioGroup2,
-              underline: false}
-            name: radio_button_4
-            layout_properties: {x: 266, y: 802.2000122070312, width: 58}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-pf(10% off on processing fee),
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
-            name: check_box_1
-            layout_properties: {x: 170, y: 874.2000732421875, width: 443}
-          - type: CheckBox
-            properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-              foreground: '', allow_indeterminate: false, visible: true, text: ATL-NL-69-indepndence-RO(10% off on interest),
-              font_size: null, font: '', spacing_above: small, spacing_below: small,
-              italic: false, background: '', bold: false, checked: false, underline: false}
-            name: check_box_2
-            layout_properties: {x: 170, y: 921.0500122070312, width: 443}
-          - type: Button
-            properties: {role: outlined-button, align: center, tooltip: '', border: '',
-              enabled: true, foreground: Black, visible: true, text: NEXT, font_size: null,
-              font: '', spacing_above: small, icon_align: left, spacing_below: small,
-              italic: false, background: '#0876E8', bold: false, underline: false,
-              icon: ''}
-            name: button_1
-            layout_properties: {x: -4.999992370605469, y: 983.800048828125, width: 699}
-            event_bindings: {click: button_1_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
